fix: search query